# MovieDB

./: .clang-format  .cproject  .project  CMakeLists.txt  Movie.h  MovieApplication.cpp  MovieApplication.h  MovieDB.cpp  MovieDB.h  README.md  main.cpp
MovieDBCore/: CMakeLists.txt  MovieBrowserImpl.cpp  MovieBrowserImpl.h  MovieManagerImpl.cpp  MovieManagerImpl.h
MovieDBCore/MovieDataBase/: CMakeLists.txt  DBManager.cpp  DBManager.h  IMovieDatabase.h  MovieDatabaseImpl.cpp  MovieDatabaseImpl.h
MovieDBCore/Sources/: CMakeLists.txt  IMovieSource.h  SampleSource.cpp  SampleSource.h  SourceProvider.cpp  SourceProvider.h
api/: movieTypes.h
docs/: FeatureList_Record.ods  editable.dia
